--- a/heterogeneity - v5.tex
+++ b/heterogeneity - v5.tex
@@ -33,7 +33,7 @@
 \firstpage{1}
 
 \title{Towards Measuring Plant Photosynthetic Heterogeneity}
-\author[Tessmer \textit{et~al}]{Oliver L Tessmer\,$^{1}$, Xi Yin\,$^{1}$, Jeffrey A Cruz\,$^{2,3}$, Linda J Savage\,$^{2}$, Xiaoming Liu\,$^{1}$, David M Kramer\,$^{2,3,\ast}$, and Jin Chen\,$^{1,2,\ast}$ \footnote{to whom correspondence should be addressed}}
+\author[Tessmer \textit{et~al}]{Oliver L Tessmer\,$^{1}$, Xi Yin\,$^{1}$, Jeffrey A Cruz\,$^{2,3}$, Linda J Savage\,$^{2}$, Xiaoming Liu\,$^{1}$, David M Kramer\,$^{2,3~\ast}$, Jin Chen\,$^{1,2}$ \footnote{to whom correspondence should be addressed}}
 \address{$^{1}$Department of Computer Science and Engineering, Michigan State University, East Lansing, MI 48824, USA\\
 $^{2}$Department of Energy Plant Research Laboratory, Michigan State University, East Lansing, MI 48824, USA\\
 $^{3}$Department of Biochemistry and Molecular Biology, Michigan State University, East Lansing, MI 48824, USA}
@@ -61,16 +61,16 @@ Software is available at XXX.
 \section{Introduction}
 
 %[Phenotyping]
-By consuming water and $CO_2$, plants produce sugars and release $O_2$ with photosynthesis \citep{kramer2011importance}. The process involves the formation of high energy intermediates capable of generating reactive oxygen species. The photosynthetic apparatus, chloroplast and surrounding leaf tissue is inherently susceptible to oxidative damage, especially under stress conditions when the supply of light energy exceeds the capacity to utilize it \citep{durrant1990characterisation,asada1996radical}. Plants have evolved a number of mechanisms, such as photosynthetic apparatus damage and repair \citep{melis1999photosystem}, to dissipate excess light energy to minimize the potential for damage at the expense of photosynthetic efficiency \citep{adams2006energy,rochaix2014regulation}. However, these mechanisms are sensitive to leaf development and thus may change from one leave tissue to another, resulting in heterogenous photosynthetic patterns (see Figure \ref{fig:heterogeneityexample}). These patterns also vary with the position, size and growth rate of leaves, since leaves at the same node is unique in age. By integrating plant morphological and physiological features, measuring plant photosynthetic heterogeneity aids interpretation of the sophisticated photosynthesis phonemics data, particularly important for plant primary productivity estimation and modeling \citep{meng2007spatial}.
+By consuming water, light and $CO_2$, plants produce sugars and release $O_2$ with photosynthesis \citep{kramer2011importance}. The process involves the formation of high energy intermediates capable of generating reactive oxygen species. The photosynthetic apparatus, chloroplast and surrounding leaf tissue is inherently susceptible to oxidative damage, especially under stress conditions when the supply of light energy exceeds the capacity to utilize it \citep{durrant1990characterisation,asada1996radical}. Plants have evolved a number of mechanisms, such as photosynthetic apparatus damage and repair \citep{melis1999photosystem}, to dissipate excess light energy to minimize the potential for damage at the expense of photosynthetic efficiency \citep{adams2006energy,rochaix2014regulation}. However, these mechanisms are sensitive to leaf development and thus may change from one leave tissue to another, resulting in heterogenous photosynthetic patterns (see an example in Figure \ref{fig:heterogeneityexample}). The heterogeneous patterns also vary with the position, size and growth rate of leaves, since leaves at the same node is unique in age. By integrating plant morphological and physiological features, measuring plant photosynthetic heterogeneity aids interpretation of the sophisticated photosynthesis phonemics data, particularly important for plant primary productivity estimation and modeling \citep{meng2007spatial}.
 
 \begin{figure}[tb]
 \centering
 \subfigure[\scriptsize Ecotype Italy]{\includegraphics[width=0.35\linewidth]{example1.PNG}}~~~~~~~~~~
-\subfigure[\scriptsize Ecotype Sweden]{\includegraphics[width=0.35\linewidth]{example2.PNG}}\vspace{-0.1in}
+\subfigure[\scriptsize Ecotype Sweden]{\includegraphics[width=0.35\linewidth]{example2.PNG}}\vspace{-0.05in}
 \subfigure[\scriptsize Histogram of all leaves in (a)]{\includegraphics[width=0.4\linewidth]{example1-hist.PNG}}~~~
 \subfigure[\scriptsize Histogram of all leaves in (b)]{\includegraphics[width=0.4\linewidth]{example2-hist.PNG}} \vspace{-0.2in}
 %\subfigure[Gene ontology (biological process)]{\includegraphics[width=0.31\textwidth]{eva_bp.eps}}
-\caption{\scriptsize We demonstrate the photosynthesis heterogeneity using two Arabidopsis ecotypes (Italy and Sweden). Both plants were grown under the same stress conditions, but the false-color images of photosystem II activity shows that the Italy ecotype is more suspectable to environmental changes. \vspace{-0.3in} } \label{fig:heterogeneityexample}
+\caption{\scriptsize We demonstrate the photosynthesis heterogeneity using two Arabidopsis ecotypes (Italy and Sweden). Both plants were grown under the same stress conditions, but the false-color images of photosystem II activity (a,b) and the distributions of the leaf-level photosynthesis (c,d) show that the Italy ecotype is more suspectable to environmental changes. \vspace{-0.3in} } \label{fig:heterogeneityexample}
 \end{figure}
 
 
@@ -80,11 +80,11 @@ By consuming water and $CO_2$, plants produce sugars and release $O_2$ with phot
 
 %photosynthetic heterogeneity refers to a plant comprising multiple regions, a significant amount of which have different photosynthesis properties, %. %For example, under full sunlight photosynthesis usually captures at most only of available energy (bonner1962upper, von1981some, kramer2011importance).
 
-Heterogeneity is a concept relating to the uniformity in a substance. The granularity of plant photosynthetic heterogeneity ranges from cells to tissues, leaves, and even the whole plant. While in-leaf variability in photosynthetic activity has been well-studied for the understanding of the effects of stomatal conductance \citep{Cheeseman1991,Buckley1997}, recent works show that photosynthetic capacity may decline with vertical gradient and leaf age \citep{Kitajima2002,chen2008effect}, suggesting that leaf-based photosynthetic heterogeneity is a key towards the understanding of plant photosynthesis.
+Heterogeneity is a statistical concept relating to the uniformity in a substance~\citep{hall2003interpretation}. The granularity of the plant photosynthetic heterogeneity studies can range from cells to tissues, leaves, and even to the whole plant level. While in-leaf variability in photosynthetic activity has been well-studied for the understanding of the effects of stomatal conductance~\citep{Cheeseman1991,Buckley1997}, recent works show that photosynthetic capacity may decline with vertical gradient and leaf age \citep{Kitajima2002,chen2008effect}, suggesting that leaf-based photosynthetic heterogeneity is a key towards processing and understanding photosynthesis phenotype images. % the understanding of plant photosynthesis.
 
-The leaf heterogeneity in photosynthesis was firstly been studied  with a simulation model \citep{chen2008effect}. Due to the lack of high-throughput phenotyping technologies, the authors determined the effects of biochemical variability via the Farquhar model (a mechanistic, biochemical model widely used to describe steady-state $CO_2$ assimilation in leaves) incorporating defined degrees of spatial variability of its parameters~\citep{sharkey1985o2,farquhar2001models}. Spatial heterogeneity in photosynthesis was found to affect the ability of the Farquhar model to accurately characterize photosynthesis at the leaf level \citep{chen2008effect}.
-
-Recently, with the advent of advanced technologies of biomedical imaging, directly measuring heterogeneity has recently assumed new importance~\citep{tiihonen1996cerebral,wieneke1999non,wang2000,cruz2014depi}. The rapid development of lighting and imaging techniques enables real-time non-invasive monitoring of photosynthesis \citep{houle2010phenomics,cruz2014depi}, resulting in vast amount of chlorophyll fluorescence images of plants \citep{wituszynska2013multivariable}. These images can be used to quantify photosynthetic behavior in genetically diverse populations, enabling to measure variability of photosynthetic parameters at high resolution across leaves, leading to better understanding of the underlying mechanisms that control the photosynthetic properties \citep{rascher2011non,fiorani2013future}. %However, there is no 
+The leaf heterogeneity in photosynthesis was firstly been studied  with computer simulation~\citep{chen2008effect}. Due to the lack of high-throughput phenotyping technologies, the authors determined the effects of biochemical variability via the Farquhar model (a mechanistic, biochemical model widely used to describe steady-state $CO_2$ assimilation in leaves), incorporating defined degrees of spatial variability of its parameters~\citep{sharkey1985o2,farquhar2001models}. %The results showed that spatial heterogeneity in photosynthesis can affect the ability of the Farquhar model to accurately characterize photosynthesis at the leaf level~\citep{chen2008effect}.
+%
+Recently, with the advent of advanced technologies of biomedical imaging, directly measuring heterogeneity has recently assumed new importance~\citep{tiihonen1996cerebral,wieneke1999non,wang2000,cruz2014depi}. The rapid development of lighting and imaging techniques enables real-time non-invasive monitoring of photosynthesis \citep{houle2010phenomics,cruz2014depi}, resulting in vast amount of chlorophyll fluorescence images of plants \citep{wituszynska2013multivariable}. These images can be used to quantify photosynthetic behavior in genetically diverse populations, enabling to measure variability of photosynthetic parameters at high resolution across leaves, leading to better understanding of the underlying mechanisms that control the photosynthetic properties \citep{rascher2011non,fiorani2013future}. %However, there is no
 
 Measuring leaf-based photosynthetic variability in large-scale phenotyping experiments requires automatical identification of most of the visible leaves in all fluorescence images and an appropriate measurement for the variation of photosynthesis parameters across leaves that takes geometrical (leaf position and size), temporal (leaf growth rate) and physiological (leaf age) information into consideration. However, there is currently no existing infrastructure to analyze such amount of phenotype information. %The challenges of this work include not only the accurate leaf alignment in complex plant leaf layout, but also the development of a new heterogeneity measure that
 %
@@ -237,10 +237,23 @@ Specifically, in $PlantPH(area)$ we have $f(l_i)=area(l_i)$, which measures the 
 
 \subsection{PlantPH workflow}
 
-The input to the PlantPH measurement is leaf-level photosynthesis, which relies on leaf alignment and tracking~\citep{yin2014}. %By taking the biological knowledge about the shapes of any possible leaf into account, we add flexibility to the model to fit to all the general leaves. Specifically, for leaf boundary identification, we develop a leaf symmetry based curve fitting model to define the initial shape of a leaf, and develop a plant layout based approach to define leaf tips and orientation, therefore defining the leaf initial position.  Note that since leaf is assumed to be symmetric, curve fitting could converge without large amount of training.
+The input to the PlantPH measurement is leaf-level photosynthesis, which relies on leaf alignment and tracking~\citep{yin2014}. Leaf alignment is a recent developed algorithm to identify leaf boundaries from a serial of florescence images. XXX
 
-First of all, we have developed the leaf alignment algorithm \citep{yin2014}. The work focus on ...
+There are two obstacles preventing us from directly using the leaf alignment algorithm for leaf heterogeneity test. First, the leaf alignment process may fail when the leaf overlap rate exceeds 50\%, and the leaf boundary is not precisely identified because of the use of predefined leaf templates. Subsequently, the leftover of leaf alignment process on a plant image consists of partial leaves that are highly overlapped and leaf boundaries of the successfully recognized leaves (Fig. XX). Leaves covered by the other leaves are usually old leaves with diverse photosynthesis activities. Simply deleting them may cause inaccurate heterogeneity scores. Second, the leaf alignment process is time consuming. Processing a serial of 100 images each containing about 20 plants may take up to 5 hours. It is not practical to process all the phenotype images, which has occupied 30T space in our hard drive, array using leaf alignment.
 
+In this article, we introduce an efficient workflow for leaf heterogeneity test. We observe that the heterogeneous plant images are rare in the whole dataset. And the distribution of a homogenous plant usually falls into one normal distribution with a relative narrow range of phenotype values compared to the distribution of a heterogenous plant (Fig 1).
+%
+Therefore, we screen all the plant images and only select those with relatively wide range of values (Equation XX) and pass them to the leaf alignment process. This process is efficient since it is very simple. Even though, it can quickly eliminate about 85\% of all the plant images, according to the results on the real data. Note that we do not use standard deviation of a similar measure because the distribution of a heterogeneous plant consists of multiple distributions and each of them may not be normal.
+
+\begin{equation}
+PlantRange(p_i) = max(p_i) - min(p_i)
+\end{equation}
+\noindent where $p_i$ is plant $i$, and max and min return the maximal and the minimum values of a plant photosynthetic parameter. Note that we delete top and bottom 2\% of the values to exclude outliers.
+
+\begin{equation}
+P-value(PlantRange(p_i)) =
+\end{equation}
+\noindent where the p-value is
 
 
 \end{methods}
@@ -286,7 +299,7 @@ Both the leaf alignment and leaf tracking directly benefit the study of leaf beh
 
 \subsection{Refining leaf alignment with density-based clustering}
 
-Given that practically any algorithm for leaf tracking and allignment will fail in some cases, we have selected an alignment method that will typically fail by "missing" leaves (parts of the plant will be excluded from allignment results) rather than giving false positives (parts of the plant are over-selected or the background is selected as a leaf). This sort of failure allows us to add another step after the inital allignment in which we use DB Scan \citep{kriegel2011density} to intelligently cluster the non-segmented plant pixels into separate leaves. DB Scan was chosen for being practical, having relatively few parameters, and not depending on the pixel intensities. Using a clustering algorithm that relies heavily on pixel intensities would defeat the purpose of identifying leaves for our application: further down the pipeline we want to consider leaves that have large amounts of variation in intensity. DB Scan is widely understood and used for analysis of spatial information with physical constraints \citep{zaiane2002clustering}, and allows fine-tuning of the minimum thickness of the resulting clusters. Avoiding very thin clusters is also imperative to our application, given that a nearly-correct leaf segmentation may result in a thin band of non-segmented pixels around the edge of a leaf. Considering these pixels as a separate leaf would not be appropriate - setting a minimum-thickness guaruntees that any such pixels would not be clustered. Similarly, a leaf with very few pixels isstatistically insignificant and often misleading even if the leaf is genuine. By setting a minimum number of pixels per cluster we discard very small clusters even if they meet the minimum thickness requirement.
+Given that practically any algorithm for leaf tracking and alignment will fail in some cases, we have selected an alignment method that will typically fail by "missing" leaves (parts of the plant will be excluded from alignment results) rather than giving false positives (parts of the plant are over-selected or the background is selected as a leaf). This sort of failure allows us to add another step after the initial alignment in which we use DB Scan \citep{kriegel2011density} to intelligently cluster the non-segmented plant pixels into separate leaves. DB Scan was chosen for being practical, having relatively few parameters, and not depending on the pixel intensities. Using a clustering algorithm that relies heavily on pixel intensities would defeat the purpose of identifying leaves for our application: further down the pipeline we want to consider leaves that have large amounts of variation in intensity. DB Scan is widely understood and used for analysis of spatial information with physical constraints \citep{zaiane2002clustering}, and allows fine-tuning of the minimum thickness of the resulting clusters. Avoiding very thin clusters is also imperative to our application, given that a nearly-correct leaf segmentation may result in a thin band of non-segmented pixels around the edge of a leaf. Considering these pixels as a separate leaf would not be appropriate - setting a minimum-thickness guarantees that any such pixels would not be clustered. Similarly, a leaf with very few pixels is statistically insignificant and often misleading even if the leaf is genuine. By setting a minimum number of pixels per cluster we discard very small clusters even if they meet the minimum thickness requirement.
 
 \subsection{PlantPH on synthetic data}
 
