--- a/heterogeneity.bib
+++ b/heterogeneity.bib
@@ -1027,6 +1027,16 @@
   publisher={Am Soc Plant Biol}
 }
 
+@article{hall2003interpretation,
+  title={The interpretation of non-homogeneous hydrometeorological time series: a case study},
+  author={Hall, MJ},
+  journal={Meteorological Applications},
+  volume={10},
+  number={01},
+  pages={61--67},
+  year={2003}
+}
+
 @article{sharkey1985o2,
   title={O2-Insensitive Photosynthesis in C3 Plants Its Occurrence and a Possible Explanation},
   author={Sharkey, TD},
